--- a/template/params.html
+++ b/template/params.html
@@ -5,8 +5,8 @@
 
 <p>
 
-  You can set the parameters associated to canny edge detection
-  (<font color=blue> <i>sigma</i> </font>, <font color=blue> <i>low</i> </font>, <font color=blue> <i>high</i> </font>).
+  You can set the parameters associated to the vectorization
+  (<font color=blue> <i>nblevels</i> </font>, <font color=blue> <i>freq</i> </font>).
   <br/>
 
 
@@ -16,21 +16,21 @@
     <input type="hidden" name="key" value="${app.key}">
   <div class="action">
     <ul>
-      <li> Step 1: set the canny edge detection parameters:
+      <li> Level set parameters:
 	<ul>
          <ul>
            <li>
                     <!-- code for slider -->
                     <div style="float:left;padding-right:25px">
-                    <label for="tmin">minimal threshold value <font color=blue><i>tmin</i></font>:</label>
+                    <label for="tmin">number of level sets <font color=blue><i>nblevels</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
                         size="4" id="tmin" name="tmin" value="3" />
                     </div>
-                    <div id="tmin_slider" name="tmin_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
+                    <div id="nblevels_slider" name="nblevels_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
                     <script type="text/javascript">
                     // Turn DIV slider into a slider linked to scale
                     $(document).ready(function() {
-                          createLinkedSlider('#tmin', '#tmin_slider', 0, 255, 1);
+                          createLinkedSlider('#nblevels', '#nblevels_slider, 0, 255, 1);
                     });
                     </script>
                     <div style="clear:both"> </div>
@@ -41,70 +41,26 @@
             <li>
              <!-- code for slider -->
              <div style="float:left;padding-right:25px">
-               <label for="tmin">maximal threshold value <font color=blue><i>tmax</i></font>:</label>
+               <label for="tmin">Frequence of retained points <font color=blue><i>freq</i></font>:</label>
                <input type="text" style="font-family:monospace;text-align:right"
                  size="4" id="tmax" name="tmax" value="10" />
              </div>
-             <div id="tmax_slider" name="tmax_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
+             <div id="freq_slider" name="freq_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
              <script type="text/javascript">
              // Turn DIV slider into a slider linked to scale
              $(document).ready(function() {
-                   createLinkedSlider('#tmax', '#tmax_slider', 0, 255, 1);
+                   createLinkedSlider('#freq', '#freq_slider', 0, 255, 1);
              });
              </script>
              <div style="clear:both"> </div>
              <!-- end of code for slider -->
 
 
- </li>
+            </li>
 
         </ul>
        </li>
 
-      <li>
-<!-- code for slider -->
-<div style="float:left;padding-right:25px">
-<label for="sigma">blur filter size: <font color=blue><i>sigma</i></font>:</label>
- <input type="text" style="font-family:monospace;text-align:right"
-    size="4" id="sigma" name="sigma" value="3.0" />
-</div>
-<div id="sigma_slider" name="sigma_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
-<script type="text/javascript">
-// Turn DIV slider into a slider linked to scale
-$(document).ready(function() {
-      createLinkedSlider('#sigma', '#sigma_slider', 0, 50, 0.1);
-});
-</script>
-<div style="clear:both"> </div>
-<!-- end of code for slider -->
-
-</li>
-</ul>
-      <li> Step 2: set the thickness Alpha Thick Blurred Segments :
-        <ul>
-          <li>
-        <div style="float:left;padding-right:25px">
-               <label for="thickness">ATBS thickness value <font color=blue><i>thickness</i></font>:</label>
-               <input type="text" style="font-family:monospace;text-align:right"
-                 size="4" id="thickness" name="thickness" value="2" />
-             </div>
-             <div id="thickness_slider" name="thickness_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
-             <script type="text/javascript">
-             // Turn DIV slider into a slider linked to scale
-             $(document).ready(function() {
-                   createLinkedSlider('#thickness', '#thickness_slider', 0, 10, 1);
-             });
-             </script>
-             <div style="clear:both"> </div>
-        </li>
-        </ul>
-
-
-       </li>
-
-      <li>
-
-        </ul> 
     <input type="submit" value="run" />
   </div>
 </form>
