--- a/template/params.html
+++ b/template/params.html
@@ -22,9 +22,9 @@
            <li>
                     <!-- code for slider -->
                     <div style="float:left;padding-right:25px">
-                    <label for="tmin">number of level sets <font color=blue><i>nblevels</i></font>:</label>
+                    <label for="nblevels">number of level sets <font color=blue><i>nblevels</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
-                        size="4" id="tmin" name="tmin" value="3" />
+                        size="4" id="nblevels" name="tmin" value="3" />
                     </div>
                     <div id="nblevels_slider" name="nblevels_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
                     <script type="text/javascript">
