--- a/template/params.html
+++ b/template/params.html
@@ -24,7 +24,7 @@
                     <div style="float:left;padding-right:25px">
                     <label for="nblevels">number of level sets <font color=blue><i>nblevels</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
-                        size="4" id="nblevels" name="tmin" value="3" />
+                        size="4" id="nblevels" name="nblevels" value="3" />
                     </div>
                     <div id="nblevels_slider" name="nblevels_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
                     <script type="text/javascript">
