--- a/template/params.html
+++ b/template/params.html
@@ -41,9 +41,9 @@
             <li>
              <!-- code for slider -->
              <div style="float:left;padding-right:25px">
-               <label for="tmin">Frequence of retained points <font color=blue><i>freq</i></font>:</label>
+               <label for="freq">Frequence of retained points <font color=blue><i>freq</i></font>:</label>
                <input type="text" style="font-family:monospace;text-align:right"
-                 size="4" id="tmax" name="tmax" value="10" />
+                 size="4" id="freq" name="freq" value="10" />
              </div>
              <div id="freq_slider" name="freq_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
              <script type="text/javascript">
