--- a/template/params.html
+++ b/template/params.html
@@ -24,13 +24,13 @@
                     <div style="float:left;padding-right:25px">
                     <label for="nblevels">number of level sets <font color=blue><i>nblevels</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
-                        size="4" id="nblevels" name="nblevels" value="3" />
+                        size="3" id="nblevels" name="nblevels" value="2" />
                     </div>
                     <div id="nblevels_slider" name="nblevels_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
                     <script type="text/javascript">
                     // Turn DIV slider into a slider linked to scale
                     $(document).ready(function() {
-                          createLinkedSlider('#nblevels', '#nblevels_slider, 2, 255, 1);
+                          createLinkedSlider('#nblevels', '#nblevels_slider', 2, 255, 1);
                     });
                     </script>
                     <div style="clear:both"> </div>
@@ -43,13 +43,13 @@
              <div style="float:left;padding-right:25px">
                <label for="freq">Frequence of retained points <font color=blue><i>freq</i></font>:</label>
                <input type="text" style="font-family:monospace;text-align:right"
-                 size="4" id="freq" name="freq" value="10" />
+                 size="3" id="freq" name="freq" value="10" />
              </div>
              <div id="freq_slider" name="freq_slider" style="width:280px;float:left;margin-top:4px;font-size:10pt"></div>
              <script type="text/javascript">
              // Turn DIV slider into a slider linked to scale
              $(document).ready(function() {
-                   createLinkedSlider('#freq', '#freq_slider', 0, 255, 1);
+                   createLinkedSlider('#freq', '#freq_slider', 1, 50, 1);
              });
              </script>
              <div style="clear:both"> </div>
