--- a/template/result.html
+++ b/template/result.html
@@ -1,14 +1,12 @@
 <%include file="header.html" />
 
-<p> The input contours of the algorithm were obtained using the <i>img2freeman</i> command with following parameters:
+<p> The resulting vectorized image  were obtained using the <i>imageVectorisation</i> command with following parameters:
 
 <ul>
 
-<li>  image  threshold  min <font color="blue"><i>tmin</i></font>: ${app.cfg['param']['tmin']}  </li>
- <li>  image  threshold  max <font color="blue"><i>tmax</i></font>: ${app.cfg['param']['tmax']}
+<li>  image  threshold  min <font color="blue"><i>nblevels</i></font>: ${app.cfg['param']['nblevels]}  </li>
+<li>  image  threshold  max <font color="blue"><i>freq</i></font>: ${app.cfg['param']['freq']}
 </li>
-<li>  blur filter size <font color="blue"><i>sigma</i></font>: ${app.cfg['param']['sigma']}  </li>
-<li>  ATS thickness value <font color="blue"><i>thickness</i></font>: ${app.cfg['param']['thickness']}  </li>
 <li>  prog version: ${app.cfg['param']['version']}
 </ul>
 </p>
@@ -45,7 +43,7 @@
 <h2>Result</h2>
 
 
-<p>You can download the resulting ATC in  <a href="${app.work_url+'res_alphaThickSegments.eps'}">eps</a> format, or download the the resulting contours in <a href="${app.work_url+'outputContours.txt'}">txt</a>  format </p>
+<p>You can download the resulting image in  <a href="${app.work_url+'res_ImageVecto.eps'}">eps</a> format</p>
 
 
 <div class="gallery" style="height:${height}px">
@@ -58,34 +56,13 @@
       </a>
     </li>
     <li>
-      <a href="${app.work_url+'res_contours.png'}">canny contours
+      <a href="${app.work_url+'res_ImageVecto.png'}">vectorial image
 	<span>
-	  <img  height="${height}" src="${app.work_url + 'res_contours.png'}" alt="output ATC" />
-	</span>
-      </a>
-    </li>
-    <li>
-      <a href="${app.work_url+'resultCurvature.png'}">MST curvature
-	<span>
-	  <img  height="${height}" src="${app.work_url + 'resultCurvature.png'}" alt="output ATC" />
-	</span>
-      </a>
-    </li>
-    <li>
-      <a href="${app.work_url+'resultUnbiasedVarianceCurvature.png'}"> MST curvature  Unbiased Variance
-	<span>
-	  <img  height="${height}" src="${app.work_url + 'resultUnbiasedVarianceCurvature.png'}" alt="output ATC" />
+	  <img  height="${height}" src="${app.work_url + 'res_ImageVecto.png'}" alt="output ATC" />
 	</span>
       </a>
     </li>
 
-    <li>
-      <a href="${app.work_url+'res_alphaThickSegments.png'}">AlphaThick Segments
-	<span>
-	  <img  height="${height}" src="${app.work_url + 'res_alphaThickSegments.png'}" alt="output ATC" />
-	</span>
-      </a>
-    </li>
   </ul>
 </div>
 
