add image visu mesh

--- a/template/result.html
+++ b/template/result.html
@@ -56,9 +56,16 @@
       </a>
     </li>
     <li>
-      <a href="${app.work_url+'res_ImageVecto.png'}">vectorial image
+      <a href="${app.work_url+'res_ImageVecto.pdf'}">vectorial image
 	<span>
 	  <img  height="${height}" src="${app.work_url + 'res_ImageVecto.png'}" alt="output ATC" />
+	</span>
+      </a>
+    </li>
+    <li>
+      <a href="${app.work_url+'res_ImageVectoMesh.pdf'}">vectorial image
+	<span>
+	  <img  height="${height}" src="${app.work_url + 'res_ImageVectoMesh.png'}" alt="output ATC" />
 	</span>
       </a>
     </li>
