--- a/template/result.html
+++ b/template/result.html
@@ -58,14 +58,14 @@
     <li>
       <a href="${app.work_url+'res_ImageVecto.pdf'}">vectorial image
 	<span>
-	  <img  height="${height}" src="${app.work_url + 'res_ImageVecto.png'}" alt="output ATC" />
+	  <img  height="${height}" src="${app.work_url + 'res_ImageVecto.png'}" alt="vectorial image" />
 	</span>
       </a>
     </li>
     <li>
-      <a href="${app.work_url+'res_ImageVectoMesh.pdf'}">vectorial image
+      <a href="${app.work_url+'res_ImageVectoMesh.pdf'}">mesh image
 	<span>
-	  <img  height="${height}" src="${app.work_url + 'res_ImageVectoMesh.png'}" alt="output ATC" />
+	  <img  height="${height}" src="${app.work_url + 'res_ImageVectoMesh.png'}" alt="mesh image" />
 	</span>
       </a>
     </li>
