--- a/template/result.html
+++ b/template/result.html
@@ -63,9 +63,9 @@
       </a>
     </li>
     <li>
-      <a href="${app.work_url+'res_ImageVectoMesh.pdf'}">mesh image
+      <a href="${app.work_url+'res_ImageVectoContours.pdf'}">mesh image
 	<span>
-	  <img  height="${height}" src="${app.work_url + 'res_ImageVectoMesh.png'}" alt="mesh image" />
+	  <img  height="${height}" src="${app.work_url + 'res_ImageVectoContours.png'}" alt="mesh image" />
 	</span>
       </a>
     </li>
