--- a/template/params.html
+++ b/template/params.html
@@ -18,7 +18,7 @@
     <ul>
       <li> Choose polygonalization algorithm
         <select name="algorithm">
-      %for _p in ['dominant points','digital level layer','Fréchet','Visual Curvature']:
+      %for _p in ['dominant points','digital level layer','Frechet','Visual Curvature']:
          <option value="${_p}">${_p}</option>
       %endfor
       </select>
