add algo section

--- a/template/params.html
+++ b/template/params.html
@@ -25,10 +25,9 @@
       </li>
       
       <li> Level set parameters:
-
                     <!-- code for slider -->
                     <div style="float:left;padding-right:25px">
-                    <label for="nblevels">number of levels  <font color=blue><i>nblevels</i></font>:</label>
+                    <label for="nblevels">number of levels sets  <font color=blue><i>nblevels</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
                         size="3" id="nblevels" name="nblevels" value="10" />
                     </div>
@@ -41,11 +40,10 @@
                     </script>
                     <div style="clear:both"> </div>
                     <!-- end of code for slider -->
-
-
-        </ul>
-        </ul>
        </li>
+      
+    
+
 </ul>
     <input type="submit" value="run" />
   </div>
