--- a/template/params.html
+++ b/template/params.html
@@ -24,7 +24,7 @@
       </select>
         <br>
       </li>
-      <li> Scale parameter (not used for digital level layer, and *10 for visual curvature)
+      <li> Scale parameter (not used for digital level layer, and *10 for visual curvature) <br>
                 <!-- code for slider -->
                     <div style="float:left;padding-right:25px">
                     <label for="svale">scale:  <font color=blue><i>scale</i></font>:</label>
