--- a/template/params.html
+++ b/template/params.html
@@ -35,7 +35,7 @@
                     <script type="text/javascript">
                     // Turn DIV slider into a slider linked to scale
                     $(document).ready(function() {
-                          createLinkedSlider('#scale', '#nscale_slider', 1, 10, 2);
+                          createLinkedSlider('#scale', '#scale_slider', 1, 10, 2);
                     });
                     </script>
                     <div style="clear:both"> </div>
