--- a/template/params.html
+++ b/template/params.html
@@ -27,7 +27,7 @@
       <li> Scale parameter (not used for digital level layer, and *10 for visual curvature) <br>
                 <!-- code for slider -->
                     <div style="float:left;padding-right:25px">
-                    <label for="svale">scale:  <font color=blue><i>scale</i></font>:</label>
+                    <label for="scale"> <font color=blue><i>scale</i></font>:</label>
                      <input type="text" style="font-family:monospace;text-align:right"
                         size="3" id="scale" name="scale" value="10" />
                     </div>
