--- a/template/result.html
+++ b/template/result.html
@@ -7,7 +7,9 @@
 <li>  image  threshold  min <font color="blue"><i>nblevels</i></font>: ${app.cfg['param']['nblevels']}  </li>
 
 </li>
-<li>  prog version: ${app.cfg['param']['version']}
+<li>  Algorithm: ${app.cfg['param']['algorithm']}</li>
+<li>  Scale: ${app.cfg['param']['scale']}</li>
+<li>  prog version: ${app.cfg['param']['version']}</li>
 </ul>
 </p>
 
