--- a/template/result.html
+++ b/template/result.html
@@ -8,7 +8,10 @@
 
 </li>
 <li>  Algorithm: ${app.cfg['param']['algorithm']}</li>
-<li>  Scale: ${app.cfg['param']['scale']}</li>
+
+  %  if str(self.cfg['param']['algorithm']) != 'digital level layer' :
+<li> Scale: ${app.cfg['param']['scale']} </li>
+%endif
 <li>  prog version: ${app.cfg['param']['version']}</li>
 </ul>
 </p>
