--- a/template/params.html
+++ b/template/params.html
@@ -17,7 +17,7 @@
     <ul>
       <li> Polygonalization algorithm:
         <select name="algorithm">
-      %for _p in ['dominant points (Béziers)','dominant points','digital level layer', 'digital level layer (circular arcs)','Frechet','Visual Curvature', 'Basic Sampling']:
+      %for _p in ['dominant points (Beziers)','dominant points','digital level layer', 'digital level layer (circular arcs)','Frechet','Visual Curvature', 'Basic Sampling']:
          <option value="${_p}">${_p}</option>
       %endfor
       </select>
